serving static files of all sizes and fixed errors

--- a/serve/index.html
+++ b/serve/index.html
@@ -31,5 +31,19 @@
                 <td>Hehe</td>
             </tr>
         </table>
+
+        <video controls>
+
+        <source src="/mnij.mp4" type="video/mp4" />
+
+        Download the 
+        <a href="/mnij.mp4">MP4</a>
+        video.
+        </video>
+
+        <audio controls>
+        <source src="test.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
     </body>
 </html>
